静态页面开发完成

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">    
-    <title>工单系统</title>
+    <title>CRM系统</title>
 </head>
 
 <body>
